--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Arts, Crafts &amp; Sewing-zlalaa</title>
         <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
-        <link href="/u/a.css" rel="stylesheet" type="text/css">
+        <link href="/u/a.min.css" rel="stylesheet" type="text/css">
     </head>
     <body>
         <nav class="nav" tabindex="-1" onclick="this.focus()">
@@ -44,42 +44,6 @@
                     <a href="/q/68.html" title="Planet Cartoon Astronaut Embroidered Cloth Sticker,2024-07-18 09:46:16" class="btn btn-a" >
                         <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267353962092.webp" alt="Planet Cartoon Astronaut Embroidered Cloth Sticker,2024-07-18 09:46:16">
                         <b>$:69.99</b>
-                    </a>
-                </div>
-                <div class="col c4">
-                    <a href="/q/67.html" title="Cute Flowers Butterfly Embroidery Cloth Sticker,2024-07-17 17:19:14" class="btn btn-a" >
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721208094759756.webp" alt="Cute Flowers Butterfly Embroidery Cloth Sticker,2024-07-17 17:19:14">
-                        <b>$:39.99</b>
-                    </a>
-                </div>
-                <div class="col c4">
-                    <a href="/q/66.html" title="Cute trumpet embroidery cloth sticker,2024-07-17 15:26:26" class="btn btn-a" >
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203780139162.webp" alt="Cute trumpet embroidery cloth sticker,2024-07-17 15:26:26">
-                        <b>$:39.99</b>
-                    </a>
-                </div>
-                <div class="col c4">
-                    <a href="/q/65.html" title="Cute cartoon panda cloth sticker,2024-07-17 15:24:02" class="btn btn-a" >
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721201164313182.webp" alt="Cute cartoon panda cloth sticker,2024-07-17 15:24:02">
-                        <b>$:19.99</b>
-                    </a>
-                </div>
-                <div class="col c4">
-                    <a href="/q/64.html" title="Mid-Autumn Element Rabbit Embroidery Cloth Stic,2024-07-17 14:52:29" class="btn btn-a" >
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721200181342114.webp" alt="Mid-Autumn Element Rabbit Embroidery Cloth Stic,2024-07-17 14:52:29">
-                        <b>$:19.99</b>
-                    </a>
-                </div>
-                <div class="col c4">
-                    <a href="/q/63.html" title="Embroidered round coaster,2024-07-17 14:38:50" class="btn btn-a" >
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721198840144145.webp" alt="Embroidered round coaster,2024-07-17 14:38:50">
-                        <b>$:9.99</b>
-                    </a>
-                </div>
-                <div class="col c4">
-                    <a href="/q/62.html" title="Five Star Embroidery Cloth Sticker,2024-07-17 11:36:49" class="btn btn-a" >
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187660915596.webp" alt="Five Star Embroidery Cloth Sticker,2024-07-17 11:36:49">
-                        <b>$:39.99</b>
                     </a>
                 </div>
 				  <a class="btn btn-b" href="/q/patches/index.html">More Product</a>
